@@ -1,5 +1,11 @@
 2005-03-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/font-select.cc (get_font_by_design_size): revert
+	pango_description_string as well.
+
+	* lily/system.cc (set_loose_columns): put loose column just left
+	of next column.
+
 	* lily/include/group-interface.hh (extract_grob_array): rename
 	from Pointer_group_interface__extract_grobs
 
